@startuml
class java.io.IOException
class org.josemalucero.app.AlkeWallet
class org.josemalucero.app.Main
class org.josemalucero.dominio.usuario.ContextoUsuario
class org.josemalucero.servicio.BCryptPasswordEncoderService
class org.josemalucero.servicio.ConsoleInputProvider
class org.josemalucero.servicio.RepositorioMonedas
class org.josemalucero.servicio.RepositorioUsuarios
org.josemalucero.app.AlkeWallet ..> org.josemalucero.dominio.usuario.ContextoUsuario
org.josemalucero.app.AlkeWallet ..> org.josemalucero.servicio.BCryptPasswordEncoderService
org.josemalucero.app.AlkeWallet ..> org.josemalucero.servicio.RepositorioMonedas
org.josemalucero.app.AlkeWallet ..> org.josemalucero.servicio.RepositorioUsuarios
org.josemalucero.app.Main ..> java.io.IOException
org.josemalucero.app.Main ..> org.josemalucero.dominio.usuario.ContextoUsuario
org.josemalucero.app.Main ..> org.josemalucero.servicio.ConsoleInputProvider
@enduml